[package]
name = "dosh"
version = "0.1.0"
description = "Dosh — Local-first social media manager for app promotion"
authors = ["you"]
edition = "2021"

[lib]
name = "dosh_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"

# SQLite via Tauri plugin
tauri-plugin-sql = { version = "2", features = ["sqlite"] }

# Keychain / credential storage
keyring = "2"

# base64 encoding
base64 = "0.22"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
log = "0.4"
env_logger = "0.11"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
